// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the AccentButton component and width is provided in the props when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  width: 50px;
  padding: 0 1.25rem;
  border: none;
  border-radius: 1.25rem;
  font-size: 1rem;
  color: #fff;
  font-weight: 500;
  cursor: pointer;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.c0:hover {
  background-color: #5c8ddb;
  color: #fff;
}

<button
    class="c0"
    width="50"
  />
</DocumentFragment>
`;

exports[`Given the Button component and width is not provided in the props when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  width: auto;
  border: none;
  border-radius: 1.25rem;
  font-size: 1rem;
  font-weight: 400;
  cursor: pointer;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given the Button component and width is provided in the props when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  width: 50px;
  border: none;
  border-radius: 1.25rem;
  font-size: 1rem;
  font-weight: 400;
  cursor: pointer;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

<button
    class="c0"
    width="50"
  />
</DocumentFragment>
`;

exports[`Given the InvisibleButton component when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  padding: 0;
  background-color: transparent;
  border: none;
  outline: none;
  cursor: pointer;
}

<button
    class="c0"
  />
</DocumentFragment>
`;
